Updates from Overleaf

--- a/problems/1000Problems.tex
+++ b/problems/1000Problems.tex
@@ -1,4 +1,45 @@
 \begin{problem}
+Bob can correctly answer each math problem on a mock test in 4 minutes, and Bo can answer each problem per 1 minute. Bo was so bored during the test, he took a nap for an hour in the middle of the test. Assuming that they started at the same time, they finished at the same time. How many questions were on the mock exam?
+\end{problem}
+
+\begin{solution}
+Let $n$ be the number of problems in the mock test. Then, $n+60=4n$, so $3n=60$. The answer is $20$. 
+\end{solution}
+
+\begin{problem}
+An energy drink is one-third caffeine and the rest water. If six ounces of water were added, it would make 20\% caffeine. How many ounces of total liquid (water plus caffeine) were in the original mixture?
+\end{problem}
+
+\begin{solution}
+Notice that $3/15=1/5=20\%$. The answer is $9$. 
+\end{solution}
+
+\begin{problem}
+A straight pole which was vertical is broken 36 feet from the ground, and the top part comes down diagonally from the break until it touches the ground 27 feet from the bottom of the pole. How many feet tall was the pole?
+\end{problem}
+
+\begin{solution}
+Notice that $27:36:k=3:4:5$, so $k=45$. Hence, $45+36=81$ is the length of the pole. The answer is $81$.
+\end{solution}
+
+\begin{problem}
+Bob runs around a circular track in the same amount of
+time that Bo takes to run around a smaller concentric circular track. Bob is twice as fast as Bo, and is running on a track of circumference $120\pi$ meters. How many meters apart are the two tracks?
+\end{problem}
+
+\begin{solution}
+The radius of the larger circle is $60$ meters. Since Bob is twice as fast as Bo, the radius of the smaller circle must be half of the larger one. The distance between the track must be $30$. Therefore, the answer is $30$. 
+\end{solution}
+
+\begin{problem}
+Compute the product of the roots of the equation $|x|^2-5|x|+6=0$.
+\end{problem}
+
+\begin{solution}
+Solving for $|x|$, we get $|x|=3,2$. Hence, $x=\pm3$ and $\pm2$. Thus, the product equals $36$. The answer is $36$.
+\end{solution}
+
+\begin{problem}
 Given a circle centered at $O$, there exists an obtuse triangle $ABC$ inscribed in the circle such that $B$ is obtuse. If $AB=3$ and $BC=8$, and the height from $B$ to $\overline{AC}$ is $2$, the area of the circle can be written as $n\pi$. Find $n$.
 \end{problem}
 
@@ -715,7 +756,7 @@ The answer is $11$.
 \end{solution}
 
 \begin{problem}
-Given a square $ABCD$ whose side length is $2$, draw a diagonal $\overline{BD}$ such that a square has two adjacent right isosceles triangles $ABD$ and $CBD$. If there exists a point $P$ on a segment $\overline{AB}$ such that $\overline{DP}$ cuts the angle $\angle ADB$ such that $m\angle ADP : m \angle BDP = 1:2$, the ratio of $AP$ to $BP$ can be written as $\dfrac{\sqrt{m}-n}{p}$ where $m$, $n$, and $p$ are square-free positive integers. Compute $m+n+p$.
+Given a square $ABCD$ whose side length is $2$, draw a diagonal $\overline{BD}$ such that a square has two adjacent right isosceles triangles $ABD$ and $CBD$. If there exists a point $P$ on a segment $\overline{AB}$ such that $\overline{DP}$ cuts the angle $\angle ADB$ such that $m\angle ADP : m \angle BDP = 1:2$, the ratio of $AP$ to $BP$ can be written as $\frac{\sqrt{m}-n}{p}$ where $m$, $n$, and $p$ are square-free positive integers. Compute $m+n+p$.
 \end{problem}
 
 \begin{solution}
@@ -1032,4 +1073,20 @@ The answer is $150$. Let $m\angle BAE=\theta$. Then, $m\angle BDC = \theta + 45^
 Hence, $BC=4k$. Since $AB=3k$ and $BC=4k$, we know that $AC=5k$. Hence, $AC=25=5k$ implies that $k=5$.\\
 \bigskip
 The area of the triangle $ABC$ can be written as $\frac12\times3k\times4k=6k^2=6(25)=150$.
+\end{solution}
+
+\begin{problem}
+How many ordered triples $(a,b,c,d)$ all chosen out of the first 10 positive integers satisfy $a<b<c<d$ where $a$, $c$ are odd, and $b$, $d$ are even?
+\end{problem}
+
+\begin{solution}
+The answer is $35$.
+\end{solution}
+
+\begin{problem}
+Let $N$ be the largest integer $n$ such that $\log_{1000}(n)$ is less than $1$. Determine the number of positive divisors of $N$.
+\end{problem}
+
+\begin{solution}
+The answer is $8$ because $999=3^3\times37$.
 \end{solution}
