--- a/main.tex
+++ b/main.tex
@@ -5,7 +5,7 @@
 \newtheorem{problem}{Problem}
 
 \newif\ifshowsolutions
-\showsolutionsfalse
+\showsolutionstrue
 
 \ifshowsolutions
   \newenvironment{solution}{\par\noindent\textbf{Solution:}\itshape}{\par}
