Updates from Overleaf

--- a/problems/1000Problems.tex
+++ b/problems/1000Problems.tex
@@ -1,5 +1,5 @@
 \begin{problem}
-Bob can correctly answer each math problem on a mock test in 4 minutes, and Bo can answer each problem per 1 minute. Bo was so bored during the test, he took a nap for an hour in the middle of the test. Assuming that they started at the same time, they finished at the same time. How many questions were on the mock exam?
+Bob can correctly answer each math problem on a mock test in $4$ minutes, and Bo can answer each problem per $1$ minute. Bo was so bored during the test, he took a nap for an hour in the middle of the test. Assuming that they started at the same time, they finished at the same time. How many questions were on the mock exam?
 \end{problem}
 
 \begin{solution}
@@ -7,7 +7,7 @@ Let $n$ be the number of problems in the mock test. Then, $n+60=4n$, so $3n=60$.
 \end{solution}
 
 \begin{problem}
-An energy drink is one-third caffeine and the rest water. If six ounces of water were added, it would make 20\% caffeine. How many ounces of total liquid (water plus caffeine) were in the original mixture?
+An energy drink is one-third caffeine and the rest water. If six ounces of water were added, it would make $20\%$ caffeine. How many ounces of total liquid (water plus caffeine) were in the original mixture?
 \end{problem}
 
 \begin{solution}
@@ -15,7 +15,7 @@ Notice that $3/15=1/5=20\%$. The answer is $9$.
 \end{solution}
 
 \begin{problem}
-A straight pole which was vertical is broken 36 feet from the ground, and the top part comes down diagonally from the break until it touches the ground 27 feet from the bottom of the pole. How many feet tall was the pole?
+A straight pole which was vertical is broken $36$ feet from the ground, and the top part comes down diagonally from the break until it touches the ground $27$ feet from the bottom of the pole. How many feet tall was the pole?
 \end{problem}
 
 \begin{solution}
@@ -37,6 +37,14 @@ Compute the product of the roots of the equation $|x|^2-5|x|+6=0$.
 
 \begin{solution}
 Solving for $|x|$, we get $|x|=3,2$. Hence, $x=\pm3$ and $\pm2$. Thus, the product equals $36$. The answer is $36$.
+\end{solution}
+
+\begin{problem}
+A die with the numbers $1$, $2$, $3$, $4$, $5$, and $6$ on its faces is biased in such a way that the probability that the number $j$ turns up is proportional to $j$. If the probability that an odd number turns up is $m/n$ where $m$ and $n$ are relatively prime, find $m+n$.
+\end{problem}
+
+\begin{solution}
+Notice that $p(2, 4, 6)=\frac{2}{21}+\frac{4}{21}+\frac{6}{21}=\frac{12}{21}=\frac{4}{7}$. Hence, $m+n=4+7=11$. The answer is $11$.
 \end{solution}
 
 \begin{problem}
@@ -1089,4 +1097,12 @@ Let $N$ be the largest integer $n$ such that $\log_{1000}(n)$ is less than $1$. 
 
 \begin{solution}
 The answer is $8$ because $999=3^3\times37$.
+\end{solution}
+
+\begin{problem}
+A square with lengths of $4$ is cut into four congruent isosceles triangles. Let $G_1$, $G_2$, $G_3$, and $G_4$ be the centroids of each triangle, respectively. The area of circumcircle of $G_1G_2G_3G_4$ can be written as $\frac{m\pi}{n}$ for relatively prime positive integers $m$ and $n$. Find $m+n$.
+\end{problem}
+
+\begin{solution}
+Let $O$ be the center of $G_1G_2G_3G_4$. The distance from $O$ to $G_1$, without loss of generality, is $\frac{4}{3}$. Therefore, the area of circumcircle is $\frac{16\pi}{9}$. Thus, the answer is $25$.
 \end{solution}
