Updates from Overleaf

--- a/problems/1000Problems.tex
+++ b/problems/1000Problems.tex
@@ -1106,3 +1106,11 @@ A square with lengths of $4$ is cut into four congruent isosceles triangles. Let
 \begin{solution}
 Let $O$ be the center of $G_1G_2G_3G_4$. The distance from $O$ to $G_1$, without loss of generality, is $\frac{4}{3}$. Therefore, the area of circumcircle is $\frac{16\pi}{9}$. Thus, the answer is $25$.
 \end{solution}
+
+\begin{problem}
+Given a right triangle $ABC$ where $B$ is a right angle, there exists $D$ on $\overline{AC}$ such that $BD$ is the height. If $AD=3$ and $CD=5$, find the integer closest to the perimeter of $ABC$.
+\end{problem}
+
+\begin{solution}
+First, notice that $BD=\sqrt{15}$. Apply Pythagorean Theorem twice to get $AB=\sqrt{24}$ and $BC=\sqrt{40}$. Hence, the perimeter is $\sqrt{24}+\sqrt{40}+15$. The closest integer is $26$. Hence, the answer is $26$.
+\end{solution}
