Updates from Overleaf

--- a/problems/1000Problems.tex
+++ b/problems/1000Problems.tex
@@ -1114,3 +1114,19 @@ Given a right triangle $ABC$ where $B$ is a right angle, there exists $D$ on $\o
 \begin{solution}
 First, notice that $BD=\sqrt{15}$. Apply Pythagorean Theorem twice to get $AB=\sqrt{24}$ and $BC=\sqrt{40}$. Hence, the perimeter is $\sqrt{24}+\sqrt{40}+15$. The closest integer is $26$. Hence, the answer is $26$.
 \end{solution}
+
+\begin{problem}
+In a singles fencing tournament with $1000$ players who can lose $5$ matches before elimination, determine the difference between the maximum and minimum number of matches a champion plays.
+\end{problem}
+
+\begin{solution}
+At most, he or she can lose $4$ matches. At least, he or she can lose $0$ matches. The difference between these number of matches is $4$.
+\end{solution}
+
+\begin{problem}
+Bob lists all possible subsets of $\{1,2,3,4,5,6\}$, including improper ones. He multiplies number(s) in each subset, and add them up. What is this number?
+\end{problem}
+
+\begin{solution}
+Consider $f(x)=(x-1)(x-2)(x-3)(x-4)(x-5)(x-6)$. Then, $f(-1)=7!=1+1+2+3+4+5+6+1\cdot2+1\cdot3+\cdots+5\cdot6+\cdots+1\cdot2\cdot3\cdot4\cdot5\cdot6$. Hence, $7!-1$ is what we want. The answer is $5039$.
+\end{solution}
