--- a/problems/1000Problems.tex
+++ b/problems/1000Problems.tex
@@ -122,7 +122,7 @@ On the complex plane there are six complex numbers satisfying $z^6=1$. Given tha
 \end{problem}
 
 \begin{solution}
-The smallest area is $\frac{\sqrt{3}}{4}$, whereas the largest area is $\frac{3\sqrt{3}}{4}$. Hence, the ratio equals $\frac{1}{3}$. The answre is $4$.
+The smallest area is $\frac{\sqrt{3}}{4}$, whereas the largest area is $\frac{3\sqrt{3}}{4}$. Hence, the ratio equals $\frac{1}{3}$. The answer is $4$.
 \end{solution}
 
 \begin{problem}
@@ -170,7 +170,7 @@ There are three rows with three seats each. If Mary, May and Mo wish to sit down
 \end{problem}
 
 \begin{solution}
-Send Mary, May, and Mo, in that order. The answer is $36$.
+Send Mary, May, and Mo, in that order. Send Mary in $9$ different places. Then, May can only be sent to $4$ different places. Likewise, Mo can only be sent to $1$ place. The answer is $36$.
 \end{solution}
 
 \begin{problem}
@@ -1096,7 +1096,7 @@ Let $N$ be the largest integer $n$ such that $\log_{1000}(n)$ is less than $1$. 
 \end{problem}
 
 \begin{solution}
-The answer is $8$ because $999=3^3\times37$.
+The answer is $8$. Notice that the largest possible value of $n$ is $999$ since $\log_{1000}(999) < 1$. Hence, the number of positive factors of $999$ can be easily be found by $(3+1)(1+1)=8$ because $999=3^3\times37$.
 \end{solution}
 
 \begin{problem}
@@ -1137,4 +1137,36 @@ Consider a polynomial $p(x)=x^3-x^2+2x-1$ whose roots are $r$, $s$, and $t$. If 
 
 \begin{solution}
 First, Viete's formula states that $r+s+t=1$, $rs+st+tr=2$ and $rst=1$. This implies that $\frac{r^3}{s^2+t^2}+\frac{s^3}{r^2+t^2}+\frac{t^3}{r^2+s^2}=\frac{r^3}{-3-r^2}+\frac{s^3}{-3-s^2}+\frac{t^3}{-3-t^2}=\frac{17}{7}$. Hence, $m+n=17+7=24$. The answer is $24$.
+\end{solution}
+
+\begin{problem}
+Let $ABCD$ be a parallelogram with $\angle A$, $\angle C$ be an acute angle. There exists some $P$ at the angle bisector of $\angle A$ such that $P$ is equidistant from $BC$, $AD$, and $AB$. Let $Q$ be the perpendicular foot from $D$ to $\overline{BC}$. If $\angle BDQ$ is congruent to $\angle BAD$, and $BD=10$, determine the length $AB$.
+\end{problem}
+
+\begin{solution}
+The answer is IDK
+\end{solution}
+
+\begin{problem}
+Given an obtuse triangle $AB$, $BC$ and $AD$, if $AB=12$, $BC=5$, and $AC^2$ is the largest prime number smaller than $230$, let $P$ be a point on $AC$ such that the measure of $\angle ABP$ is three times the measure of $\angle CBP$. Determine $\frac{AP}{CP}$.
+\end{problem}
+
+\begin{solution}
+I have no idea.
+\end{solution}
+
+\begin{problem}
+For variables $a$, $b$, and $c$, if $a+b+c=1$, find the value of $a^2b^2c^2$ if $\frac{1}{a+b}+\frac{1}{b+c}+\frac{1}{a+c}=1$.
+\end{problem}
+
+\begin{solution}
+Do algebraic manipulation using $a+b+c=1$ to conclude that $abc=-1$. Hence, $a^2b^2c^2=1$. The answer is $1$.
+\end{solution}
+
+\begin{problem}
+The sum of real solutions to a quartic equation $x^4-2x^3+\frac12x^2-2x+1=0$ can be written as $\frac{a+\sqrt{b}}{a}$ where $a$ and $b$ are positive integers such that $b$ is a square-free integer. Find the sum of $a$ and $b$.
+\end{problem}
+
+\begin{solution}
+Divide all sides by $x^2$. Then, notice that $(x+1/x)^2=1\pm \frac{\sqrt{10}}{2}$. Hence, $x+\frac1x=1+\frac{\sqrt{10}}{2}$, so the sum of real solutions equals $\frac{2+\sqrt{10}}{2}$. The answer is $12$.
 \end{solution}
